# loggy

./: .gitignore  Cargo.toml  README.md  publish.sh
src/: db.rs  main.rs
src/handlers/: admin.rs  health_metrics.rs  ingestion.rs  mod.rs
src/mcp/: mod.rs  resources.rs  tools.rs  types.rs
