[package]
name = "loggy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
libsql = { version = "0.9", default-features = false, features = ["core"] }
clap = { version = "4", features = ["derive"] }
hostname = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
prost = "0.13"
opentelemetry-proto = { version = "0.29", features = ["full"] }
